<resources>
    <string name="app_name">MyBasicArchitecture</string>
    <string name="score_format">Current Score: %d</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_home">Home</string>
    <string name="title_more">More</string>
    <string name="title_fav">Fav</string>
    <string name="title_news">News</string>
    <string name="startservice">startService</string>
    <string name="stopservice">stopService</string>
    <string name="bindservice">bindService</string>
    <string name="unbindservice">unBindService</string>
    <string name="startandbindservice">startAndBindService</string>
    <string name="stopandunbindservice">stopAndUnbindService</string>
    <string name="title_activity_algotithm">AlgotithmActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
</resources>